# alpha

./: .gitignore  CMakeLists.txt
assets/: cube.blend
src/: CMakeLists.txt
src/game/: CMakeLists.txt  human_view.hpp  main.cpp  main_menu.hpp  screen.hpp
src/game/rendering/: buffer.hpp  font.cpp  font.hpp  font_5x7.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/logic/: CMakeLists.txt  actor.hpp  logic.cpp  logic.hpp
src/logic/components/: common.hpp
src/system/: CMakeLists.txt  application.cpp  application.hpp  cache.cpp  cache.hpp  event.hpp  file.hpp  json.hpp  process.cpp  process.hpp  time.hpp
